Add Vercel Blob integration for image uploads

--- a/env.example
+++ b/env.example
@@ -20,5 +20,8 @@ UPLOAD_DIR=./public/uploads
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
+# Vercel Blob Storage
+BLOB_READ_WRITE_TOKEN=your-vercel-blob-token-here
+
 
 
