feat: Complete image scraping and organization system
- Import 12 products from backend-import.json
- Download and organize all product images from WordPress
- Create scraped-images folder structure
- Add Vercel Blob storage integration
- Update database with local and Vercel image paths
- Add comprehensive deployment scripts and documentation
- Configure static file serving for scraped images
- Add npm scripts for image management workflow

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "seed": "ts-node src/scripts/seedDatabase.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "download-images": "ts-node src/scripts/downloadImportImages.ts",
+    "upload-to-vercel": "ts-node src/scripts/uploadToVercelBlob.ts",
+    "setup-vercel": "ts-node src/scripts/setupVercelBlob.ts",
+    "organize-images": "ts-node src/scripts/organizeScrapedImages.ts"
   },
   "keywords": [
     "forza",
