feat: Fix image filenames to match product IDs
- Fix 23 local scraped image filenames from lowercase to uppercase
- Ensure all image filenames match their product IDs (e.g., FRP.png, C150.png)
- Add scripts to check and fix image filename consistency
- Update package.json with new image management scripts
- Verify FRP product now correctly uses FRP.png filename
- Maintain compatibility with both local and Vercel Blob storage

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "download-images": "ts-node src/scripts/downloadImportImages.ts",
     "upload-to-vercel": "ts-node src/scripts/uploadToVercelBlob.ts",
     "setup-vercel": "ts-node src/scripts/setupVercelBlob.ts",
-    "organize-images": "ts-node src/scripts/organizeScrapedImages.ts"
+    "organize-images": "ts-node src/scripts/organizeScrapedImages.ts",
+    "fix-filenames": "ts-node src/scripts/fixImageFilenames.ts",
+    "fix-vercel-filenames": "ts-node src/scripts/fixVercelBlobFilenames.ts",
+    "check-urls": "ts-node src/scripts/checkImageUrls.ts",
+    "check-product": "ts-node src/scripts/checkSpecificProduct.ts"
   },
   "keywords": [
     "forza",
