--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,16 @@
     "seed": "ts-node src/scripts/seedDatabase.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "download-images": "ts-node src/scripts/downloadImportImages.ts",
+    "upload-to-vercel": "ts-node src/scripts/uploadToVercelBlob.ts",
+    "setup-vercel": "ts-node src/scripts/setupVercelBlob.ts",
+    "organize-images": "ts-node src/scripts/organizeScrapedImages.ts",
+    "fix-filenames": "ts-node src/scripts/fixImageFilenames.ts",
+    "fix-vercel-filenames": "ts-node src/scripts/fixVercelBlobFilenames.ts",
+    "check-urls": "ts-node src/scripts/checkImageUrls.ts",
+    "check-product": "ts-node src/scripts/checkSpecificProduct.ts",
+    "update-heroku-urls": "ts-node src/scripts/updateHerokuImageUrls.ts"
   },
   "keywords": [
     "forza",
@@ -22,37 +31,42 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
+    "@vercel/blob": "^2.0.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/compression": "^1.7.5",
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
+    "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
+    "nodemon": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   }
 }
-
