Add lightweight frontend with product management - ProductList and ProductDetail components - Inline editing with save/cancel - Category filtering - API context for environment switching - Enhanced error handling

--- a/frontend-only/.gitignore
+++ b/frontend-only/.gitignore
@@ -49,3 +49,7 @@ coverage/
 
 # Vercel
 .vercel
+
+# Product brochures (stored on Vercel Blob, not in git)
+public/product-brochures/
+public/product-images/
