Fix build: install dev dependencies for TypeScript compilation

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Forza Products Management System",
   "scripts": {
-    "postinstall": "cd backend && npm install",
+    "postinstall": "cd backend && npm install --include=dev",
     "build": "cd backend && npm run build",
     "start": "cd backend && npm start"
   },
