--- a/frontend-only/vercel.json
+++ b/frontend-only/vercel.json
@@ -4,9 +4,10 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "framework": "vite",
+  "cleanUrls": true,
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/).*)",
       "destination": "/index.html"
     }
   ],
