Add Node.js 24.x runtime override in Vercel config

--- a/frontend-only/vercel.json
+++ b/frontend-only/vercel.json
@@ -5,6 +5,11 @@
   "devCommand": "npm run dev",
   "framework": "vite",
   "cleanUrls": true,
+  "functions": {
+    "app/**": {
+      "runtime": "nodejs24.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/((?!assets/).*)",
