Optimize product data structure and sync frontend/backend

--- a/package.json
+++ b/package.json
@@ -23,7 +23,22 @@
     "update-images-from-mockups": "ts-node src/scripts/updateProductImagesFromMockups.ts",
     "update-images-from-mockups:live": "ts-node src/scripts/updateProductImagesFromMockups.ts --live",
     "update-to-vercel-blob": "ts-node src/scripts/updateImagesToVercelBlob.ts",
-    "update-to-vercel-blob:live": "ts-node src/scripts/updateImagesToVercelBlob.ts --live"
+    "update-to-vercel-blob:live": "ts-node src/scripts/updateImagesToVercelBlob.ts --live",
+    "update-specific-images": "ts-node src/scripts/updateSpecificProductImages.ts",
+    "update-specific-images:live": "ts-node src/scripts/updateSpecificProductImages.ts --live",
+    "add-ct5530": "ts-node src/scripts/addC-T5530.ts",
+    "add-ct5530:live": "ts-node src/scripts/addC-T5530.ts",
+    "update-product-names": "ts-node src/scripts/updateProductNamesToTitleCase.ts",
+    "update-product-names:live": "ts-node src/scripts/updateProductNamesToTitleCase.ts --live",
+    "update-product-names-heroku": "ts-node src/scripts/updateProductNamesHeroku.ts",
+    "update-product-names-heroku:live": "ts-node src/scripts/updateProductNamesHeroku.ts --live",
+    "update-product-names-api": "ts-node src/scripts/updateProductNamesViaAPI.ts",
+    "update-product-names-api:live": "ts-node src/scripts/updateProductNamesViaAPI.ts --live",
+    "migrate-latest-csv": "ts-node src/scripts/migrateLatestCSV.ts",
+    "migrate-latest-csv:live": "ts-node src/scripts/migrateLatestCSV.ts --live",
+    "optimize-migrate": "ts-node src/scripts/optimizeAndMigrateV2.ts",
+    "optimize-migrate:live": "ts-node src/scripts/optimizeAndMigrateV2.ts --live",
+    "fix-product-names": "ts-node src/scripts/fixProductNames.ts"
   },
   "keywords": [
     "forza",
@@ -38,6 +53,7 @@
     "@vercel/blob": "^2.0.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
