Update product image URLs to match Vercel Blob filenames and add update script

--- a/package.json
+++ b/package.json
@@ -38,7 +38,16 @@
     "migrate-latest-csv:live": "ts-node src/scripts/migrateLatestCSV.ts --live",
     "optimize-migrate": "ts-node src/scripts/optimizeAndMigrateV2.ts",
     "optimize-migrate:live": "ts-node src/scripts/optimizeAndMigrateV2.ts --live",
-    "fix-product-names": "ts-node src/scripts/fixProductNames.ts"
+    "fix-product-names": "ts-node src/scripts/fixProductNames.ts",
+    "restore-vercel-images": "ts-node src/scripts/restoreVercelBlobImageUrls.ts",
+    "sync-images-to-json": "ts-node src/scripts/syncImageUrlsToJson.ts",
+    "list-vercel-media": "ts-node src/scripts/listVercelBlobMedia.ts",
+    "list-all-media": "ts-node src/scripts/listAllMediaFromDatabase.ts",
+    "update-transportation-images": "ts-node src/scripts/updateTransportationImageNames.ts",
+    "update-construction-images": "ts-node src/scripts/updateConstructionImageNames.ts",
+    "fix-name-title-case": "ts-node src/scripts/fixProductNameTitleCase.ts",
+    "fix-name-casing": "ts-node src/scripts/fixProductNameCasing.ts",
+    "update-product-image-names": "ts-node src/scripts/updateProductImageNames.ts"
   },
   "keywords": [
     "forza",
