--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "update-construction-images": "ts-node src/scripts/updateConstructionImageNames.ts",
     "fix-name-title-case": "ts-node src/scripts/fixProductNameTitleCase.ts",
     "fix-name-casing": "ts-node src/scripts/fixProductNameCasing.ts",
-    "update-product-image-names": "ts-node src/scripts/updateProductImageNames.ts"
+    "update-product-image-names": "ts-node src/scripts/updateProductImageNames.ts",
+    "verify-image-urls": "ts-node src/scripts/verifyImageUrls.ts",
+    "sync-images-json-to-db": "ts-node src/scripts/syncImageUrlsFromJsonToDb.ts",
+    "force-update-industrial-images": "ts-node src/scripts/forceUpdateIndustrialImages.ts"
   },
   "keywords": [
     "forza",
