--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "verify-image-urls": "ts-node src/scripts/verifyImageUrls.ts",
     "sync-images-json-to-db": "ts-node src/scripts/syncImageUrlsFromJsonToDb.ts",
     "force-update-industrial-images": "ts-node src/scripts/forceUpdateIndustrialImages.ts",
-    "update-production-images": "ts-node src/scripts/updateProductionImageUrls.ts"
+    "update-production-images": "ts-node src/scripts/updateProductionImageUrls.ts",
+    "direct-update-production": "ts-node src/scripts/directUpdateProductionImages.ts"
   },
   "keywords": [
     "forza",
