Final fix for industrial image URLs in JSON and entire project

--- a/known-vercel-scraping-report.json
+++ b/known-vercel-scraping-report.json
@@ -568,8 +568,8 @@
       "localPath": "C:\\Users\\nimro\\Downloads\\01_Projects\\WebProjects\\PMST\\backend\\public\\scraped-products-full\\ca1000.png"
     },
     {
-      "imageUrl": "https://rifer2chtzhht7fs.public.blob.vercel-storage.com/81-0389.png",
-      "filename": "81-0389.png",
+      "imageUrl": "https://jw4to4yw6mmciodr.public.blob.vercel-storage.com/product-images/Industrial/81-0389 5 gal pail.png",
+      "filename": "81-0389 5 gal pail.png",
       "localPath": "C:\\Users\\nimro\\Downloads\\01_Projects\\WebProjects\\PMST\\backend\\public\\scraped-products-full\\81-0389.png"
     }
   ],
