Implement contact form, newsletter, and email functionality

--- a/backend/env.example
+++ b/backend/env.example
@@ -28,6 +28,25 @@ BLOB_READ_WRITE_TOKEN=your-vercel-blob-token-here
 # See src/config/allowedProducts.ts for the list
 ENABLE_PRODUCT_WHITELIST=false
 
+# ========================================
+# EMAIL CONFIGURATION (Postmark)
+# ========================================
+# Get your API token from: https://account.postmarkapp.com/servers
+POSTMARK_API_TOKEN=your-postmark-server-api-token
+
+# Email addresses
+EMAIL_FROM=noreply@forzabuilt.com
+TEAM_EMAIL=team@forzabuilt.com
+
+# ========================================
+# CONTACT & NEWSLETTER CONFIGURATION
+# ========================================
+# Salt for hashing IP addresses (change this in production!)
+IP_HASH_SALT=your-random-salt-here-change-in-production
+
+# PostgreSQL Database URL (Heroku provides this automatically)
+# DATABASE_URL=postgres://user:password@host:5432/database
+
 
 
 
