Final hardening: admin endpoints, rate limit headers, honeypot standardization, PROD_VERIFICATION.md

--- a/backend/env.example
+++ b/backend/env.example
@@ -44,6 +44,9 @@ TEAM_EMAIL=team@forzabuilt.com
 # Salt for hashing IP addresses (change this in production!)
 IP_HASH_SALT=your-random-salt-here-change-in-production
 
+# Admin token for protected endpoints (generate a secure random string)
+ADMIN_TOKEN=your-secure-admin-token-here
+
 # PostgreSQL Database URL (Heroku provides this automatically)
 # DATABASE_URL=postgres://user:password@host:5432/database
 
