--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "migrate": "ts-node src/scripts/migrate.ts",
     "seed": "ts-node src/scripts/seedDatabase.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
