--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "postinstall": "cd backend && npm install --include=dev",
     "build": "cd backend && npm run build",
-    "start": "cd backend && npm start"
+    "start": "cd backend && npm start",
+    "migrate": "cd backend && npm run migrate"
   },
   "engines": {
     "node": "20.x",
