Final hardening: EMAIL_FEATURES_ENABLED, X-Admin-Token only, Cache-Control, docs updates

--- a/backend/env.example
+++ b/backend/env.example
@@ -41,10 +41,15 @@ TEAM_EMAIL=team@forzabuilt.com
 # ========================================
 # CONTACT & NEWSLETTER CONFIGURATION
 # ========================================
+# Enable email features (contact form emails, newsletter emails)
+# Set to 'true' to require Postmark configuration for /ready to pass
+EMAIL_FEATURES_ENABLED=false
+
 # Salt for hashing IP addresses (change this in production!)
 IP_HASH_SALT=your-random-salt-here-change-in-production
 
 # Admin token for protected endpoints (generate a secure random string)
+# Header: X-Admin-Token: <your-token>
 ADMIN_TOKEN=your-secure-admin-token-here
 
 # PostgreSQL Database URL (Heroku provides this automatically)
